package microplatform.adservice.domain;

public enum AdStatus {
    ACTIVE,
    INACTIVE

}
