package microplatform.adservice.domain.events;

public class AdCreatedEvent implements AdEvent {
}
