package microplatform.adservice.domain.events;

public interface AdEvent {
}
