package microplatform.adservice.domain.events;

public class AdListedEvent implements AdEvent {
}
