package microplatform.adservice.domain.events;

public class AdUnlistedEvent implements AdEvent {

    private Long adId;

}
