@startuml
'https://plantuml.com/class-diagram
package domain {

note top of Ad
  Composition associations show relationships
  where the sub-object exists only as long as the
  container class exists.
  The classes have a common lifecycle.
end note

class ItemForSale <<Entity>> {
  Long id
  LocalDateTime created
  String title
  String description
  String brand
  BigDecimal price
}

class Ad <<AggregateRoot>> {
  Long id
  LocalDateTime created
  String sellerId
  PaymentType paymentType
  LocalDate expiryDate
  List<Message> messages
}

class Location {
  String postalCode
  String city
  String street
  String streetNo
}

class Address {
  String address
}

enum ItemCategory {
  KITCHEN
  BATHROOM
  BEDROOM
  GARDEN
}

enum AdStatus {
  ACTIVE
  INACTIVE
}

class Image {}

class User <<Seller>> {
  id
  List<adId> adIds
  paymentInfo
  validated
  Address
}
Ad --* ItemForSale  : " contains"
Ad -* AdStatus
ItemForSale --* Location : " contains"
ItemForSale -* ItemCategory : " contains"
ItemForSale --* "0..*" Image : " contains"
Ad::sellerId - User::id
User::adIds - "0..* " Ad::id
User -- Address

package events {
  class AdEvent {}
  class AdCreatedEvent extends AdEvent
  class AdListedEvent extends AdEvent
  class AdUnlistedEvent extends AdEvent
}
}
@enduml
